Clarify sentence on how a fold is defined

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -293,12 +293,12 @@ tissue flow during gastrulation<span class="citation"
 data-cites="Costa1993-qj Dicko2017-wz"><sup><a href="#ref-Costa1993-qj"
 role="doc-biblioref">11</a>,<a href="#ref-Dicko2017-wz"
 role="doc-biblioref">12</a></sup></span>. The cephalic furrow retains a
-significant number of blastoderm cells beneath the surface during
-gastrulation (about 10% according to recent estimates<span
+significant number of blastoderm cells beneath the surface of the embryo
+during gastrulation (about 10% according to recent estimates<span
 class="citation" data-cites="Stern2021-zv"><sup><a
 href="#ref-Stern2021-zv" role="doc-biblioref">13</a></sup></span>), but
-what function such storage accomplishes remains unclear, and these
-hypotheses have not been investigated <em>in vivo</em>.</p>
+what function such storage accomplishes remains unclear, and none of
+these hypotheses have been investigated <em>in vivo</em>.</p>
 <!--The mechanisms controlling the formation of the cephalic furrow remain poorly understood [@Gilmour2017-um]-->
 <!--But the interactions of the cephalic furrow with other morphogenetic movements have not been investigated *in vivo* [@Kong2017-ac].-->
 <!--Current models for the cephalic furrow account for the mechanics of the invagination [@Eritano2020-mi; @Jeffery2023; @OlderModel], but not the global context of how it interacts with neighbouring tissues during gastrulation.-->
@@ -423,19 +423,18 @@ role="doc-biblioref">5</a></sup></span>. The first mitotic domains in
 gastrulation<span class="citation" data-cites="Foe1989-cw"><sup><a
 href="#ref-Foe1989-cw" role="doc-biblioref">5</a></sup></span> which
 coincides with the formation of ectopic folds (Figure <a
-href="#fig:ectopic">1</a>a,c,d). Ectopic folds also always appear in
-between or adjacent to mitotic domains (Figure <a
-href="#fig:mitotic">2</a>a). The dividing cells synchronously lose their
-basal attachment, round up at the apical side, and more than double
-(2.3x) their apical area during anaphase elongation (Figure <a
-href="#fig:apical">S3</a>). This expansion compresses the adjacent
-non-dividing cells which are the first to infold, followed by a portion
-of the dividing cells within mitotic domains (Figure <a
-href="#fig:mitotic">2</a>b). Mitotic expansions always precede ectopic
-folding (Figure <a href="#fig:mitotic">2</a>c, Figure <a
-href="#fig:initiator">S1</a>a). Compared to the progressive invagination
-of the cephalic furrow (about 14 min), the process of ectopic fold
-formation is abrupt (about 4 min) (Figure <a
+href="#fig:ectopic">1</a>a,c,d). Ectopic folds always appear in between
+or adjacent to mitotic domains (Figure <a href="#fig:mitotic">2</a>a).
+The dividing cells synchronously lose their basal attachment, round up
+at the apical side, and more than double (2.3x) their apical area during
+anaphase elongation (Figure <a href="#fig:apical">S3</a>). This
+expansion compresses the adjacent non-dividing cells which are the first
+to infold, followed by a portion of the dividing cells within mitotic
+domains (Figure <a href="#fig:mitotic">2</a>b). Mitotic expansions
+always precede ectopic folding (Figure <a href="#fig:mitotic">2</a>c,
+Figure <a href="#fig:initiator">S1</a>a). Compared to the progressive
+invagination of the cephalic furrow (about 14 min), the process of
+ectopic fold formation is abrupt (about 4 min) (Figure <a
 href="#fig:initiator">S1</a>a, <a href="#fig:vid-mitotic-fold">Video
 5</a>). To understand the dynamics of tissue strain, we measured the
 rate of tissue deformation (strain rate) at the head–trunk using
@@ -522,23 +521,20 @@ and can happen at different iterations across different simulations, and
 because we are mainly interested in analyzing the initial position and
 dynamics of the folding, we used the peak of bending energy as the
 reference point to compare and analyze the simulation results.</p>
-<!--TODO: Define L (semi-major axis), g (germ band push), s (embryo length)-->
 <!--TODO:AB: Describe overfolding events. Mark them on phase diagram. Discuss as limitation-->
 <p>To obtain realistic values where the model matches experimental
 observations, we performed a sweep across the bending rigidity parameter
 space in mutant conditions without the cephalic furrow. We quantified
 the tissue dynamics by measuring the distance of each particle to the
-vitelline envelope across iterations, and defined a fold when this
-distance was greater than the maximum standard deviation of the average
-particle depth under the ground noise levels.
-<!--TODO: Add panel with the threshold for counting folds--> Under the
-baseline condition without mitotic domains or germ band extension (only
-noise), we observe no ectopic fold formation for any bending rigidity
-values (Figure <a href="#fig:model">3</a>e). The probability of buckling
-increases with the germ band extension and inversely with the bending
-rigidity (Figure <a href="#fig:model">3</a>e, Figure <a
-href="#fig:model-features">S6</a>b). We observe a buckling transition in
-the phase space in softer conditions
+vitelline envelope across iterations. We defined a fold when this
+distance was greater than the maximum particle depth under the ground
+noise level. Under the baseline condition without mitotic domains or
+germ band extension (only noise), we observe no ectopic fold formation
+for any bending rigidity values (Figure <a href="#fig:model">3</a>e).
+The probability of buckling increases with the germ band extension and
+inversely with the bending rigidity (Figure <a href="#fig:model">3</a>e,
+Figure <a href="#fig:model-features">S6</a>b). We observe a buckling
+transition in the phase space in softer conditions
 (<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><mo>≈</mo><mn>0.7</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_b^* \approx 0.7 \times 10^{−4}</annotation></semantics></math>)
 already at 10% germ band extension, but in stiffer conditions
 (<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><mo>≈</mo><mn>1.2</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_b^* \approx 1.2 \times 10^{−4}</annotation></semantics></math>)
@@ -560,6 +556,7 @@ neither the mitotic domains nor the germ band can drive ectopic folding
 by themselves. We thus set to test these predictions <em>in vivo</em> by
 performing perturbation experiments to individually inhibit the
 formation of mitotic domains and the extension of the germ band.</p>
+<!--TODO: Add panel with the threshold for counting folds-->
 <!--TODO:AB: Give a physics-based estimation of order of magnitude of dimensionless parameter from literature. Good sanity check to see if values are not off the charts!-->
 <p>We first asked whether the extension of the germ band alone can
 generate ectopic folds. To that end, we generated double-mutant flies
@@ -765,32 +762,31 @@ mutants. The synchronized apical expansion of dividing cells in mitotic
 domains pushes the adjacent non-dividing cells outward, and forms
 potentially unstable regions of different epithelial thickness, while
 the germ band extension generates a global compression on the head–trunk
-interface (Figure <a href="#fig:summary">5</a>a,b).
+interface (Figure <a href="#fig:summary">5</a>a,b). In a condition where
+there is an excess of tissue on the embryonic surface (no cephalic
+furrow), the increased compressive stresses compromise the stability of
+the epithelium during gastrulation. This suggests the head–trunk
+epithelium is under mechanical stress from the morphogenetic movements
+of gastrulation in normal development.</p>
 <!--The fact that *eve* mutants have no cell intercalation [@Collinet2015-af] suggests that the formation of ectopic folds depends on the rapid phase of germ band extension [@Campos-Ortega1985-ma], driven mainly by the posterior midgut invagination.-->
-In a condition where there is an excess of tissue on the embryonic
-surface (no cephalic furrow), the increased compressive stresses
-compromise the stability of the epithelium during gastrulation. This
-suggests the head–trunk epithelium is under mechanical stress from the
-morphogenetic movements of gastrulation in normal development.</p>
 <p>Our findings give support to the idea that the cephalic furrow is
 preventing the build up of these compressive stresses at the head–trunk
 boundary. The presence of the cephalic furrow abolishes the formation of
 ectopic folds in sibling controls and in our simulations, suggesting
 that invaginating tissue out-of-plane is an effective way to alleviate
-compressive stresses.
+compressive stresses. The pre-patterned position of the initiator cells,
+and the active cellular mechanisms deployed to drive the cephalic furrow
+invagination at the onset of gastrulation, anticipates the compressive
+stresses at the head–trunk boundary. When mitotic domains appear, a
+significant portion of the head epithelium is already invaginated and
+the mechanical forces in the tissue are directed to a single,
+predictable fold. The relative timing of invagination in respect to the
+other morphogenetic movements is a crucial factor for preventing
+mechanical instabilities in the tissue. We thus propose that the
+transient storage created by the cephalic furrow has a stress-absorbing
+role, contributing to safeguard the integrity of the epithelial
+monolayer at the head–trunk boundary during gastrulation.</p>
 <!--prd mutant shows that partially perturbing CF formation is enough to prime the position of folding.-->
-The pre-patterned position of the initiator cells, and the active
-cellular mechanisms deployed to drive the cephalic furrow invagination
-at the onset of gastrulation, anticipates the compressive stresses at
-the head–trunk boundary. When mitotic domains appear, a significant
-portion of the head epithelium is already invaginated and the mechanical
-forces in the tissue are directed to a single, predictable fold. The
-relative timing of invagination in respect to the other morphogenetic
-movements is a crucial factor for preventing mechanical instabilities in
-the tissue. We thus propose that the transient storage created by the
-cephalic furrow has a stress-absorbing role, contributing to safeguard
-the integrity of the epithelial monolayer at the head–trunk boundary
-during gastrulation.</p>
 <!--TODO:CDM: No space to discuss the egg shape implications, I guess? Or did we decide to hold that for a follow-up?-->
 <p>What remains unclear, however, is whether the increased tissue
 strain, or the buckling itself, have any adverse effects to
@@ -1624,7 +1620,6 @@ abdita</em></a>. <em>PLoS One</em> <strong>9</strong>, e84421
 </div>
 </div>
 <h1 id="figures">Figures</h1>
-<!--![Cephalic furrow patterning and morphogenesis. (a) Embryonic invaginations during *Drosophila* gastrulation. (b) Morphogenesis of the cephalic furrow. (c) Molecular patterning of the cephalic furrow.](figures/Fig1.jpg){#fig:intro width=50%}-->
 <div id="fig:ectopic" class="fignos">
 <figure>
 <img src="figures/Fig1.jpg" style="width:100.0%"
