Fix unclear sentences flagged by PT

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -550,12 +550,13 @@ Mitotic domains alone can induce ectopic folds in softer conditions
 For most of the parameter space, the combined action of mitotic domains
 and germ band maximizes the probability of ectopic fold formation
 (Figure <a href="#fig:model">3</a>e,f). These simulations show that
-above certain a bending rigidity
+above a certain bending rigidity
 (<math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><mo>&gt;</mo><mn>1.0</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_b^* &gt; 1.0 \times 10^{−4}</annotation></semantics></math>),
 neither the mitotic domains nor the germ band can drive ectopic folding
 by themselves. We thus set to test these predictions <em>in vivo</em> by
 performing perturbation experiments to individually inhibit the
 formation of mitotic domains and the extension of the germ band.</p>
+<!--TODO: Resolve issue with model/experiment reasoning. Which predictions?-->
 <!--TODO: Add panel with the threshold for counting folds-->
 <!--TODO:AB: Give a physics-based estimation of order of magnitude of dimensionless parameter from literature. Good sanity check to see if values are not off the charts!-->
 <p>We first asked whether the extension of the germ band alone can
@@ -605,11 +606,8 @@ and that the germ band extension is required.</p>
 domains nor the germ band can promote ectopic folding by themselves. In
 our model, these situations occur around a bending rigidity of
 <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msubsup><mi>K</mi><mi>b</mi><mo>*</mo></msubsup><mo>≈</mo><mn>1.0</mn><mo>×</mo><msup><mn>10</mn><mrow><mo>−</mo><mn>4</mn></mrow></msup></mrow><annotation encoding="application/x-tex">K_b^* \approx 1.0 \times 10^{−4}</annotation></semantics></math>.
-It is at this bending rigidity that the number of folds in simulations
-without mitotic domains and maximum germ band extension
-(<em>btd</em>–<em>stg</em> double mutant), and in simulations with
-mitotic domains and minimum germ band extension (<em>btd</em> or
-<em>eve</em> mutants), begin to fall below 1 (Figure <a
+At this bending rigidity the number of folds falls below 1 in germ band
+only and mitotic domains only conditions (Figure <a
 href="#fig:model-features">S6</a>b,c). This suggests that the bending
 rigidity regime of the epithelium <em>in vivo</em> is around the same
 order of magnitude.</p>
