Fix unclear sentence about CF as autonomous

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -664,12 +664,15 @@ initiator cells in early wildtype embryos, we find that the recoil
 velocity increases with time and decreases with distance, with an
 approximate range of at least 40µm anterior and posterior to the
 initiator cells (Figure <a href="#fig:experiments">4</a>i). This
-suggests the cephalic furrow actively generates tension by pulling the
-surrounding tissues. These experiments rule out the germ band extension
-as a driver of cephalic furrow invagination, and give support to the
-notion that the cephalic furrow forms autonomously by independent active
-mechanisms which are deployed before the other morphogenetic movements
-of gastrulation.</p>
+suggests that the cell shortening of initiator cells, which is actively
+driven by lateral myosin contractility<span class="citation"
+data-cites="Eritano2020-mi"><sup><a href="#ref-Eritano2020-mi"
+role="doc-biblioref">8</a></sup></span>, pulls on the adjacent cells and
+generates tension in the surrounding tissues. These experiments
+corroborate the view that cephalic furrow initiation is autonomous and
+independent of other morphogenetic movements of gastrulation, such as
+the germ band extension.</p>
+<!--These experiments rule out the germ band extension as a driver of cephalic furrow invagination, and give support to the notion that the cephalic furrow forms autonomously by independent active mechanisms which are .-->
 <!--The simulations show that the average depth of the cephalic furrow correlates with the percentage of germ band extension ({@fig:model}i).-->
 <!--Mitotic activity and germ band elongation contributes to the depth of the cephalic furrow [@Campos-Ortega1997-rd].-->
 <!--TODO:AB: Is the increase in recoil velocity because CF or epithelial maturation?-->
