Add statistics to folded area EF comparison

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -2255,7 +2255,7 @@ behavior. Time betwee frames is about 4min. Scale bars = 20µm
 <div id="fig:features" class="fignos">
 <figure>
 <img src="figures/FigS2.jpg" data-tag="S2" style="width:100.0%"
-alt="Figure S2: Differences between ectopic folding and cephalic furrow formation. a, Profile view of a btd mutant embryo showing the presence of two ectopic folds (arrows) forming next to dividing cells (asterisks). Scale bar = 20µm. b, Distribution of ectopic folds in eve homozygotes (right) and sibling controls (left). Scale bar = 50µm. c, Folded area of the cephalic furrow (CF) and ectopic folds (EF) in eve embryos. The folded region is outlined in yellow on cartographic projections of a representative sibling control eve heterozygote (left) and of a eve homozygote (right). The numbers indicate the average folded area for the sample type in µm2×103. d, Dynamics of cephalic furrow and ectopic fold formation in eve mutants. e, Dynamics, angle directionality, and tortuosity measurements comparing the cephalic furrow and ectopic fold formation. Within the first fifteen minutes after gastrulation, the cephalic furrow exhibits a typical posterior shift on the dorsal side which declines the initial angle of the invagination from 80° to about 60° in relation to the anteroposterior axis. During this period, begins as a straight line and bends showing a correspondent increase in the measured tortuosity values of the furrow outline. In contrast, ectopic folds show no obvious trend in angular direction tortuosity values over time. For both angle and tortuosity analysis, n=6. f, Maximum folding depth of the cephalic furrow and ectopic folds in btd and eve mutants. Ectopic folds are shallower than the cephalic furrow in both genetic backgrounds (btd p=1.278e-09 and eve p=9.728e-05 in a Welch Two Sample t-test). Each dot corresponds to a single fold; each embryo can have multiple folds. The number of embryos analyzed for btd is 22 heterozygotes and 6 homozygotes, and for eve is 14 heterozygotes and 4 homozygotes. g, Folded area of ectopic folds in wildtype embryos compared to ectopic folds in btd, eve, and prd embryos. h, Lateral views of a wildtype (top) and a prd mutant (bottom) exhibiting ectopic folds. Scale bar = 50µm. i, Folded area of the cephalic furrow (CF) and ectopic folds (EF) in the wildtype (top) and prd mutant (bottom) shown in h. The folded region is outlined in yellow on a cartographic projection. The numbers indicate the average folded area in µm2×103 for the CFs and EFs separately. j, Comparison of the folded area between the cephalic furrow and the ectopic folds in different genetic backgrounds. k, Developmental sequence of the wildtype embryo ectopic fold annotated in i. Four cells are temporarily infolded during the mitotic expansion of adjacent cells. Scale bar = 10µm." />
+alt="Figure S2: Differences between ectopic folding and cephalic furrow formation. a, Profile view of a btd mutant embryo showing the presence of two ectopic folds (arrows) forming next to dividing cells (asterisks). Scale bar = 20µm. b, Distribution of ectopic folds in eve homozygotes (right) and sibling controls (left). Scale bar = 50µm. c, Folded area of the cephalic furrow (CF) and ectopic folds (EF) in eve embryos. The folded region is outlined in yellow on cartographic projections of a representative sibling control eve heterozygote (left) and of a eve homozygote (right). The numbers indicate the average folded area for the sample type in µm2×103. d, Dynamics of cephalic furrow and ectopic fold formation in eve mutants. e, Dynamics, angle directionality, and tortuosity measurements comparing the cephalic furrow and ectopic fold formation. Within the first fifteen minutes after gastrulation, the cephalic furrow exhibits a typical posterior shift on the dorsal side which declines the initial angle of the invagination from 80° to about 60° in relation to the anteroposterior axis. During this period, begins as a straight line and bends showing a correspondent increase in the measured tortuosity values of the furrow outline. In contrast, ectopic folds show no obvious trend in angular direction tortuosity values over time. For both angle and tortuosity analysis, n=6. f, Maximum folding depth of the cephalic furrow and ectopic folds in btd and eve mutants. Ectopic folds are shallower than the cephalic furrow in both genetic backgrounds (btd p=1.278e-09 and eve p=9.728e-05 in a Welch Two Sample t-test). Each dot corresponds to a single fold; each embryo can have multiple folds. The number of embryos analyzed for btd is 22 heterozygotes and 6 homozygotes, and for eve is 14 heterozygotes and 4 homozygotes. g, Folded area of ectopic folds in wildtype and mutant embryos (btd, eve, and prd). Ectopic folds in wildtype occupy a smaller area than ectopic folds in cephalic furrow mutants (p=9.107e-06 in a Wilcoxon rank sum exact test). h, Lateral views of a wildtype (top) and a prd mutant (bottom) exhibiting ectopic folds. Scale bar = 50µm. i, Folded area of the cephalic furrow (CF) and ectopic folds (EF) in the wildtype (top) and prd mutant (bottom) shown in h. The folded region is outlined in yellow on a cartographic projection. The numbers indicate the average folded area in µm2×103 for the CFs and EFs separately. j, Comparison of the folded area between the cephalic furrow and the ectopic folds in different genetic backgrounds. k, Developmental sequence of the wildtype embryo ectopic fold annotated in i. Four cells are temporarily infolded during the mitotic expansion of adjacent cells. Scale bar = 10µm." />
 <figcaption aria-hidden="true"><span>Figure S2:</span> Differences
 between ectopic folding and cephalic furrow formation.
 <strong>a</strong>, Profile view of a <em>btd</em> mutant embryo showing
@@ -2287,21 +2287,22 @@ Sample t-test). Each dot corresponds to a single fold; each embryo can
 have multiple folds. The number of embryos analyzed for <em>btd</em> is
 22 heterozygotes and 6 homozygotes, and for <em>eve</em> is 14
 heterozygotes and 4 homozygotes. <strong>g</strong>, Folded area of
-ectopic folds in wildtype embryos compared to ectopic folds in
-<em>btd</em>, <em>eve</em>, and <em>prd</em> embryos.
-<strong>h</strong>, Lateral views of a wildtype (top) and a <em>prd</em>
-mutant (bottom) exhibiting ectopic folds. Scale bar = 50µm.
-<strong>i</strong>, Folded area of the cephalic furrow (CF) and ectopic
-folds (EF) in the wildtype (top) and <em>prd</em> mutant (bottom) shown
-in <strong>h</strong>. The folded region is outlined in yellow on a
-cartographic projection. The numbers indicate the average folded area in
-µm<sup>2</sup>×10<sup>3</sup> for the CFs and EFs separately.
-<strong>j</strong>, Comparison of the folded area between the cephalic
-furrow and the ectopic folds in different genetic backgrounds.
-<strong>k</strong>, Developmental sequence of the wildtype embryo
-ectopic fold annotated in <strong>i</strong>. Four cells are temporarily
-infolded during the mitotic expansion of adjacent cells. Scale bar =
-10µm.</figcaption>
+ectopic folds in wildtype and mutant embryos (<em>btd</em>,
+<em>eve</em>, and <em>prd</em>). Ectopic folds in wildtype occupy a
+smaller area than ectopic folds in cephalic furrow mutants (p=9.107e-06
+in a Wilcoxon rank sum exact test). <strong>h</strong>, Lateral views of
+a wildtype (top) and a <em>prd</em> mutant (bottom) exhibiting ectopic
+folds. Scale bar = 50µm. <strong>i</strong>, Folded area of the cephalic
+furrow (CF) and ectopic folds (EF) in the wildtype (top) and
+<em>prd</em> mutant (bottom) shown in <strong>h</strong>. The folded
+region is outlined in yellow on a cartographic projection. The numbers
+indicate the average folded area in µm<sup>2</sup>×10<sup>3</sup> for
+the CFs and EFs separately. <strong>j</strong>, Comparison of the folded
+area between the cephalic furrow and the ectopic folds in different
+genetic backgrounds. <strong>k</strong>, Developmental sequence of the
+wildtype embryo ectopic fold annotated in <strong>i</strong>. Four cells
+are temporarily infolded during the mitotic expansion of adjacent cells.
+Scale bar = 10µm.</figcaption>
 </figure>
 </div>
 <div id="fig:apical" class="fignos">
