--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -2393,25 +2393,24 @@ above.</figcaption>
 <div id="fig:stg" class="fignos">
 <figure>
 <img src="figures/FigS7.jpg" data-tag="S7" style="width:100.0%"
-alt="Figure S7: Lateral and dorsal views of stg mutant embryos. Embryos stg homozygotes show no cell divisions after gastrulation. Despite of that, the early morphogenetic movements of gastrulation occur normally. a, Lateral 3D renderings. The cephalic furrow forms without delays and exhibits a similar dynamics of invagination compared to wildtype embryos. The only noticeable difference is that the dorsal portion does not shift as posteriorly as in sibling controls, which could be due to the absence of mitotic domains in the head. b, Profile views. The initiator cell behaviors are not perturbed in stg mutants and the morphology of the invagination is intact. In fact, because of the lack of cell divisions, the epithelium remains more uniform during gastrulation when compared to sibling controls or wildtype embryos." />
+alt="Figure S7: Lateral and dorsal views of stg mutant embryos. stg homozygotes show no cell divisions after gastrulation but the early morphogenetic movements of gastrulation occur normally. Asterisks indicate mitotic domains. a, Lateral 3D renderings. The cephalic furrow forms without delays and exhibits a similar dynamics of invagination compared to wildtype embryos. The only noticeable difference is that the dorsal portion does not shift as posteriorly as in sibling controls, which could be due to the absence of mitotic domains in the head. Scale bar = 50µm. b, Profile views. The initiator cell behaviors are not perturbed in stg mutants and the morphology of the invagination is intact. In fact, because of the lack of cell divisions, the epithelium remains more uniform during gastrulation when compared to sibling controls or wildtype embryos. Scale bar = 20µm." />
 <figcaption aria-hidden="true"><span>Figure S7:</span> Lateral and
-dorsal views of <em>stg</em> mutant embryos. Embryos <em>stg</em>
-homozygotes show no cell divisions after gastrulation. Despite of that,
-the early morphogenetic movements of gastrulation occur normally.
-<strong>a</strong>, Lateral 3D renderings. The cephalic furrow forms
-without delays and exhibits a similar dynamics of invagination compared
-to wildtype embryos. The only noticeable difference is that the dorsal
-portion does not shift as posteriorly as in sibling controls, which
-could be due to the absence of mitotic domains in the head.
-<strong>b</strong>, Profile views. The initiator cell behaviors are not
-perturbed in <em>stg</em> mutants and the morphology of the invagination
-is intact. In fact, because of the lack of cell divisions, the
-epithelium remains more uniform during gastrulation when compared to
-sibling controls or wildtype embryos.</figcaption>
+dorsal views of <em>stg</em> mutant embryos. <em>stg</em> homozygotes
+show no cell divisions after gastrulation but the early morphogenetic
+movements of gastrulation occur normally. Asterisks indicate mitotic
+domains. <strong>a</strong>, Lateral 3D renderings. The cephalic furrow
+forms without delays and exhibits a similar dynamics of invagination
+compared to wildtype embryos. The only noticeable difference is that the
+dorsal portion does not shift as posteriorly as in sibling controls,
+which could be due to the absence of mitotic domains in the head. Scale
+bar = 50µm. <strong>b</strong>, Profile views. The initiator cell
+behaviors are not perturbed in <em>stg</em> mutants and the morphology
+of the invagination is intact. In fact, because of the lack of cell
+divisions, the epithelium remains more uniform during gastrulation when
+compared to sibling controls or wildtype embryos. Scale bar =
+20µm.</figcaption>
 </figure>
 </div>
-<!--TODO: Add scale bars for (a)-->
-<!--TODO: Annotate cell divisions in (b)-->
 <div id="fig:cf-sweep" class="fignos">
 <figure>
 <img src="figures/FigS8.jpg" data-tag="S8" style="width:100.0%"
