Include Gap43-mCherry reference in fig legend

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -1624,7 +1624,7 @@ abdita</em></a>. <em>PLoS One</em> <strong>9</strong>, e84421
 <div id="fig:ectopic" class="fignos">
 <figure>
 <img src="figures/Fig1.jpg" style="width:100.0%"
-alt="Figure 1: Formation of ectopic folds in cephalic furrow mutants. a, Overview of key developmental events using a standard developmental staging44. The formation of the cephalic furrow is delayed in prd mutants and absent in btd and eve mutants. In the latter, ectopic folds form near the canonical invagination site of the cephalic furrow. Wildtype and prd embryos form less frequent and smaller ectopic folds more anterior or posterior to the cephalic furrow. Ectopic folds appear later and unfold quicker than the cephalic furrow, and their formation coincides with the appearance of mitotic domains and with the rapid phase of the germ band extension45. b, Profile view of wildtype and prd embryos (early stage 8), and btd and eve embryos (late stage 8) showing the divergent morphology of the cephalic furrow and ectopic folds, respectively. Scale bars = 20µm. c, Lateral view of sibling controls (heterozygotes) and mutant embryos (btd or eve homozygotes). The arrows indicate epithelial folds, the asterisks indicate the position of mitotic domains, and the percentages indicate the extent of germ band extension relative to the egg length. Scale bars = 50µm. d, Timing of formation of cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow forms about 7 minutes after gastrulation in wildtype (+/+, n=16) and btd heterozygotes (+/−, n=6), and is delayed in eve and prd heterozygotes (+/−, n=7 and n=10, respectively) and in prd homozygotes (−/−, n=5). Ectopic folds form about 20min after gastrulation in btd and eve homozygotes (−/−, n=5 and n=5, respectively). One dot represents one embryo. e, Percentage of germ band extension at the time of formation of the cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow appears at 10% germ band extension, except in prd heterozygotes where it varies up to 40%. Ectopic folds form at 30–35% germ band extension. The n values are the same as in d. f, Variability in the distribution of the cephalic furrow in sibling controls (btd heterozygotes) and of the ectopic folds in btd mutants (n=6). Scale bars = 50µm. g, Folded area of the cephalic furrow (CF) and ectopic folds (EF) in btd embryos. The folded region is outlined in yellow on cartographic projections of a representative sibling control btd heterozygote (left) and of a btd homozygote (right). The numbers indicate the average folded area for the sample type in µm2×103. h, Quantification of the total folded area of epithelial surface in cephalic furrow mutants." />
+alt="Figure 1: Formation of ectopic folds in cephalic furrow mutants. a, Overview of key developmental events using a standard developmental staging44. The formation of the cephalic furrow is delayed in prd mutants and absent in btd and eve mutants. In the latter, ectopic folds form near the canonical invagination site of the cephalic furrow. Wildtype and prd embryos form less frequent and smaller ectopic folds more anterior or posterior to the cephalic furrow. Ectopic folds appear later and unfold quicker than the cephalic furrow, and their formation coincides with the appearance of mitotic domains and with the rapid phase of the germ band extension45. b, Profile view of wildtype and prd embryos (early stage 8), and btd and eve embryos (late stage 8) showing the divergent morphology of the cephalic furrow and ectopic folds, respectively. Membrane marker = Gap43-mCherry. Scale bars = 20µm. c, Lateral view of sibling controls (heterozygotes) and mutant embryos (btd or eve homozygotes). The arrows indicate epithelial folds, the asterisks indicate the position of mitotic domains, and the percentages indicate the extent of germ band extension relative to the egg length. Membrane marker = Gap43-mCherry. Scale bars = 50µm. d, Timing of formation of cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow forms about 7 minutes after gastrulation in wildtype (+/+, n=16) and btd heterozygotes (+/−, n=6), and is delayed in eve and prd heterozygotes (+/−, n=7 and n=10, respectively) and in prd homozygotes (−/−, n=5). Ectopic folds form about 20min after gastrulation in btd and eve homozygotes (−/−, n=5 and n=5, respectively). One dot represents one embryo. e, Percentage of germ band extension at the time of formation of the cephalic furrow and ectopic folds in different genetic backgrounds. The cephalic furrow appears at 10% germ band extension, except in prd heterozygotes where it varies up to 40%. Ectopic folds form at 30–35% germ band extension. The n values are the same as in d. f, Variability in the distribution of the cephalic furrow in sibling controls (btd heterozygotes) and of the ectopic folds in btd mutants (n=6). Scale bars = 50µm. g, Folded area of the cephalic furrow (CF) and ectopic folds (EF) in btd embryos. The folded region is outlined in yellow on cartographic projections of a representative sibling control btd heterozygote (left) and of a btd homozygote (right). The numbers indicate the average folded area for the sample type in µm2×103. h, Quantification of the total folded area of epithelial surface in cephalic furrow mutants." />
 <figcaption aria-hidden="true"><span>Figure 1:</span> Formation of
 ectopic folds in cephalic furrow mutants. <strong>a</strong>, Overview
 of key developmental events using a standard developmental staging<span
@@ -1644,11 +1644,12 @@ role="doc-biblioref">45</a></sup></span>. <strong>b</strong>, Profile
 view of wildtype and <em>prd</em> embryos (early stage 8), and
 <em>btd</em> and <em>eve</em> embryos (late stage 8) showing the
 divergent morphology of the cephalic furrow and ectopic folds,
-respectively. Scale bars = 20µm. <strong>c</strong>, Lateral view of
-sibling controls (heterozygotes) and mutant embryos (<em>btd</em> or
-<em>eve</em> homozygotes). The arrows indicate epithelial folds, the
-asterisks indicate the position of mitotic domains, and the percentages
-indicate the extent of germ band extension relative to the egg length.
+respectively. Membrane marker = Gap43-mCherry. Scale bars = 20µm.
+<strong>c</strong>, Lateral view of sibling controls (heterozygotes) and
+mutant embryos (<em>btd</em> or <em>eve</em> homozygotes). The arrows
+indicate epithelial folds, the asterisks indicate the position of
+mitotic domains, and the percentages indicate the extent of germ band
+extension relative to the egg length. Membrane marker = Gap43-mCherry.
 Scale bars = 50µm. <strong>d</strong>, Timing of formation of cephalic
 furrow and ectopic folds in different genetic backgrounds. The cephalic
 furrow forms about 7 minutes after gastrulation in wildtype (+/+, n=16)
@@ -2322,20 +2323,19 @@ original apical area of their parent cell.</figcaption>
 <div id="fig:strain" class="fignos">
 <figure>
 <img src="figures/FigS4.jpg" data-tag="S4" style="width:80.0%"
-alt="Figure S4: Strain rate analysis in btd mutants. Cropped region of cartographic projections of btd sibling controls (top) and homozygote embryos (bottom). The membrane marker (Gap43-mCherry) is overlayed with a heatmap indicating the regions of increased strain rate in the tissue. The value is the sum of isotropic and anisotropic strain rates obtained through a particle image velocimetry analysis. We used the strain rates in the regions outlined as head–trunk and trunk–germ to generate the plot in Figure 2d." />
+alt="Figure S4: Strain rate analysis in btd mutants. Cropped region of cartographic projections of btd sibling controls (top, n=3) and homozygote embryos (bottom, n=3). The membrane marker (Gap43-mCherry) is overlayed with a heatmap indicating the regions of increased strain rate in the tissue. The value is the sum of isotropic and anisotropic strain rates obtained through a particle image velocimetry analysis. We used the strain rates in the regions outlined as head–trunk and trunk–germ to generate the plot in Figure 2d." />
 <figcaption aria-hidden="true"><span>Figure S4:</span> Strain rate
 analysis in <em>btd</em> mutants. Cropped region of cartographic
-projections of <em>btd</em> sibling controls (top) and homozygote
-embryos (bottom). The membrane marker (Gap43-mCherry) is overlayed with
-a heatmap indicating the regions of increased strain rate in the tissue.
-The value is the sum of isotropic and anisotropic strain rates obtained
-through a particle image velocimetry analysis. We used the strain rates
-in the regions outlined as head–trunk and trunk–germ to generate the
-plot in Figure <a href="#fig:mitotic">2</a>d.</figcaption>
+projections of <em>btd</em> sibling controls (top, n=3) and homozygote
+embryos (bottom, n=3). The membrane marker (Gap43-mCherry) is overlayed
+with a heatmap indicating the regions of increased strain rate in the
+tissue. The value is the sum of isotropic and anisotropic strain rates
+obtained through a particle image velocimetry analysis. We used the
+strain rates in the regions outlined as head–trunk and trunk–germ to
+generate the plot in Figure <a href="#fig:mitotic">2</a>d.</figcaption>
 </figure>
 </div>
 <!--TODO: Add scale bar-->
-<!--TODO: Add n values-->
 <div id="fig:proportions" class="fignos">
 <figure>
 <img src="figures/FigS5.jpg" data-tag="S5" style="width:70.0%"
@@ -2439,7 +2439,7 @@ the cephalic furrow is crucial to its ability to buffer the ectopic
 folding.</figcaption>
 </figure>
 </div>
-<!--TODO: Replace with newer simulations?-->
+<!--TODO: Replace with newer simulations-->
 <div id="fig:tortuosity" class="fignos">
 <figure>
 <img src="figures/FigS9.jpg" data-tag="S9" style="width:100.0%"
