Replace GitHub's repository citation for Zenodo

--- a/3-text/furrow.html
+++ b/3-text/furrow.html
@@ -870,7 +870,7 @@ complete list of FlyBase<span class="citation"
 data-cites="Gramates2022-xe"><sup><a href="#ref-Gramates2022-xe"
 role="doc-biblioref">24</a></sup></span> accession numbers and genotypes
 is available in the project’s data repository<span class="citation"
-data-cites="Vellutini2023-hg"><sup><a href="#ref-Vellutini2023-hg"
+data-cites="Vellutini2023-ng"><sup><a href="#ref-Vellutini2023-ng"
 role="doc-biblioref">25</a></sup></span>.</p>
 <h2 id="animal-husbandry-and-embryo-collection">Animal husbandry and
 embryo collection</h2>
@@ -1221,10 +1221,11 @@ data-cites="RStudio_Team2011-wr"><sup><a href="#ref-RStudio_Team2011-wr"
 role="doc-biblioref">42</a></sup></span>, and Python 3.10.7 using
 Jupyter notebooks<span class="citation"
 data-cites="Granger2021-zg"><sup><a href="#ref-Granger2021-zg"
-role="doc-biblioref">43</a></sup></span>. All data, scripts, notebooks,
-and analyses pipelines are available in the repository<span
-class="citation" data-cites="Vellutini2023-hg"><sup><a
-href="#ref-Vellutini2023-hg"
+role="doc-biblioref">43</a></sup></span>. The data, scripts, and
+analyses pipelines are available in a GitHub repository at <a
+href="https://github.com/bruvellu/cephalic-furrow">github.com/bruvellu/cephalic-furrow</a>
+and have been deposited in Zenodo<span class="citation"
+data-cites="Vellutini2023-ng"><sup><a href="#ref-Vellutini2023-ng"
 role="doc-biblioref">25</a></sup></span>.</p>
 <h1 id="acknowledgements">Acknowledgements</h1>
 <p>We thank all current and former LoPaTs for the discussions and
@@ -1436,11 +1437,12 @@ href="https://doi.org/10.1093/genetics/iyac035">Fly base: A guided tour
 of highlighted features</a>. <em>Genetics</em> <strong>220</strong>,
 iyac035 (2022).</div>
 </div>
-<div id="ref-Vellutini2023-hg" class="csl-entry" role="doc-biblioentry">
+<div id="ref-Vellutini2023-ng" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">25. </div><div
-class="csl-right-inline">Vellutini, B. C. <a
-href="https://github.com/bruvellu/cephalic-furrow">Repository of the
-cephalic furrow project</a>. (2023).</div>
+class="csl-right-inline">Vellutini, B. C. Repository for: Pre-patterned
+epithelial invagination prevents mechanical instability during fly
+gastrulation. (2023) doi:<a
+href="https://doi.org/10.5281/zenodo.7781948">10.5281/zenodo.7781948</a>.</div>
 </div>
 <div id="ref-Schindelin2012-di" class="csl-entry"
 role="doc-biblioentry">
